--- a/second_page.html
+++ b/second_page.html
@@ -25,46 +25,40 @@ h1 {
   margin-bottom: 20px;
 }
 
-/* Search container */
-.search-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-bottom: 20px;
-}
-
-/* Select dropdown style */
-#moods {
-  padding: 10px;
-  border-radius: 4px;
-  border: 1px solid #ccc;
-  width: 250px;
-  margin-bottom: 20px;
-  font-size: 16px;
-}
-
-/* Search button style */
-button {
-  padding: 10px 20px;
-  background-color: #1db954;
-  color: #fff;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  font-size: 16px;
-  transition: background-color 0.3s;
-}
-
-button:hover {
-  background-color: #1ed760;
-}
-
 /* Profile picture style */
 #profile-picture {
+  position: relative;
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  margin-top: 20px;
+  overflow: hidden;
+}
+
+/* Profile picture dropdown style */
+.profile-dropdown {
+  position: absolute;
+  top: 60px;
+  right: 0;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  z-index: 1;
+  display: none;
+}
+
+#profile-picture:hover .profile-dropdown {
+  display: block;
+}
+
+/* Profile dropdown item style */
+.profile-dropdown-item {
+  padding: 10px;
+  cursor: pointer;
+}
+
+.profile-dropdown-item:hover {
+  background-color: #f0f0f0;
 }
 </style>
 </head>
@@ -72,17 +66,12 @@ button:hover {
 
 <h1>Spotify API Mood Search</h1>
 
-<div id="profile-picture"></div> <!-- Profile picture will be displayed here -->
-
-<div class="search-container">
-  <select id="moods">
-    <option value="0">Select a mood...</option>
-    <option value="chill">Chill</option>
-    <option value="sad">Sad</option>
-    <option value="happy">Happy</option>
-  </select>
-
-  <button onclick="searchSongs()">Search</button>
+<!-- Profile picture with dropdown -->
+<div id="profile-picture">
+  <img src="" alt="Profile Picture" id="profile-image">
+  <div class="profile-dropdown">
+    <div class="profile-dropdown-item" onclick="logout()">Logout</div>
+  </div>
 </div>
 
 <script>
@@ -115,17 +104,13 @@ function fetchSpotifyProfile(accessToken) {
 
 function displayProfilePicture(profilePictureUrl) {
   // Display user's profile picture
-  var profilePictureDiv = document.getElementById('profile-picture');
-  profilePictureDiv.innerHTML = `<img src="${profilePictureUrl}" alt="Profile Picture">`;
+  var profilePictureImg = document.getElementById('profile-image');
+  profilePictureImg.src = profilePictureUrl;
 }
 
-function searchSongs() {
-  var selectedMood = $("#moods").val();
-  if (selectedMood == "0") {
-    alert("Please select a mood.");
-    return;
-  }
-  // Add your code for searching songs based on mood here
+function logout() {
+  // Redirect to logout URL or perform logout action
+  window.location.href = "logout.html"; // Replace with actual logout URL or action
 }
 
 function getAccessTokenFromURL() {
