--- a/second_page.html
+++ b/second_page.html
@@ -110,7 +110,7 @@ function displayProfilePicture(profilePictureUrl) {
 
 function logout() {
   // Redirect to logout URL or perform logout action
-  window.location.href = "logout.html"; // Replace with actual logout URL or action
+  window.location.href = "https://scripteds.github.io/MoodSwinger/index.html"; // Replace with actual logout URL or action
 }
 
 function getAccessTokenFromURL() {
