--- a/second_page.html
+++ b/second_page.html
@@ -15,7 +15,7 @@ body {
   color: #333;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-end; /* Align items to the right */
 }
 
 /* Heading style */
@@ -32,6 +32,7 @@ h1 {
   height: 50px;
   border-radius: 50%;
   overflow: hidden;
+  margin-bottom: 20px; /* Add margin to separate from dropdown */
 }
 
 /* Profile picture dropdown style */
@@ -72,6 +73,20 @@ h1 {
   <div class="profile-dropdown">
     <div class="profile-dropdown-item" onclick="logout()">Logout</div>
   </div>
+</div>
+
+<!-- Reuse search container from the main page -->
+<div class="search-container">
+  <select id="artists">
+    <option value="0">Select an artist...</option>
+    <option value="4dpARuHxo51G3z768sgnrY">Adele</option>
+    <option value="3TVXtAsR1Inumwj472S9r4">Drake</option>
+    <option value="6qqNVTkY8uBg9cP3Jd7DAH">Billie Eilish</option>
+    <option value="1Xyo4u8uXC1ZmMpatF05PJ">The Weeknd</option>
+    <option value="0du5cEVh5yTK9QJze8zA0C">Bruno Mars</option>
+  </select>
+
+  <button onclick="searchSongs()">Search</button>
 </div>
 
 <script>
