--- a/second_page.html
+++ b/second_page.html
@@ -25,11 +25,135 @@ h1 {
   margin-bottom: 20px;
 }
 
-/* Profile picture container style */
-.profile-container {
-  position: absolute;
-  top: 20px;
-  right: 20px;
+/* Search container */
+.search-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+/* Track details container */
+.track-details {
+  width: 100%;
+  max-width: 800px;
+  text-align: center;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  margin-bottom: 20px;
+}
+
+/* Track title */
+.track-title {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+/* Artist name and release year */
+.artist-release {
+  font-size: 18px;
+  margin-bottom: 20px;
+}
+
+/* Spotify embed style */
+iframe {
+  width: 100%;
+  height: 300px;
+  border: none;
+  border-radius: 8px;
+  margin-bottom: 20px;
+}
+
+/* Select dropdown style */
+#moods {
+  padding: 10px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  width: 250px;
+  margin-bottom: 20px;
+  font-size: 16px;
+}
+
+/* Search button style */
+button {
+  padding: 10px 20px;
+  background-color: #1db954;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s;
+}
+
+button:hover {
+  background-color: #1ed760;
+}
+
+/* Results container style */
+#results-container {
+  width: 100%;
+  max-width: 600px;
+  text-align: center;
+  margin-top: 20px;
+}
+
+/* Tracks container style */
+.tracks {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+/* Individual track style */
+.track {
+  padding: 15px;
+  margin: 0 auto;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  background-color: #fff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  max-width: 500px; /* Increased max-width for larger display */
+}
+
+.track p {
+  margin: 0;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.track a {
+  display: block;
+  margin-top: 10px;
+  color: #1db954;
+  text-decoration: none;
+  font-size: 14px;
+}
+
+.track a:hover {
+  text-decoration: underline;
+}
+
+/* Logout button style */
+#logout-button {
+  display: block;
+  margin: 30px auto;
+  padding: 10px 20px;
+  background-color: #ff3b3b;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s;
+}
+
+#logout-button:hover {
+  background-color: #ff5e5e;
 }
 
 /* Profile picture style */
@@ -37,35 +161,7 @@ h1 {
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  overflow: hidden;
-  cursor: pointer;
-}
-
-/* Profile picture dropdown style */
-.profile-dropdown {
-  position: absolute;
-  top: 60px;
-  right: 0;
-  background-color: #fff;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  z-index: 1;
-  display: none;
-}
-
-#profile-picture:hover .profile-dropdown {
-  display: block;
-}
-
-/* Profile dropdown item style */
-.profile-dropdown-item {
-  padding: 10px;
-  cursor: pointer;
-}
-
-.profile-dropdown-item:hover {
-  background-color: #f0f0f0;
+  margin-top: 20px;
 }
 </style>
 </head>
@@ -73,36 +169,46 @@ h1 {
 
 <h1>Spotify API Mood Search</h1>
 
-<!-- Profile picture with dropdown -->
-<div class="profile-container">
-  <div id="profile-picture">
-    <img src="" alt="Profile Picture" id="profile-image">
-    <div class="profile-dropdown">
-      <div class="profile-dropdown-item" onclick="logout()">Logout</div>
-    </div>
-  </div>
-</div>
+<div id="profile-picture"></div> <!-- Profile picture will be displayed here -->
 
-<!-- Reuse search container from the main page -->
 <div class="search-container">
-  <select id="artists">
-    <option value="0">Select an artist...</option>
-    <option value="4dpARuHxo51G3z768sgnrY">Adele</option>
-    <option value="3TVXtAsR1Inumwj472S9r4">Drake</option>
-    <option value="6qqNVTkY8uBg9cP3Jd7DAH">Billie Eilish</option>
-    <option value="1Xyo4u8uXC1ZmMpatF05PJ">The Weeknd</option>
-    <option value="0du5cEVh5yTK9QJze8zA0C">Bruno Mars</option>
+  <select id="moods">
+    <option value="0">Select a mood...</option>
+    <option value="chill">Chill</option>
+    <option value="sad">Sad</option>
+    <option value="happy">Happy</option>
   </select>
 
   <button onclick="searchSongs()">Search</button>
 </div>
 
+<div id="results-container">
+  <div id="results"></div>
+</div>
+
+<button id="logout-button">Logout</button>
+
 <script>
 $(document).ready(function() {
-  // Check if access token is present in URL hash
+  // Attach event listener to logout button
+  $("#logout-button").click(function() {
+    // Redirect to index.html
+    window.location.href = "https://scripteds.github.io/MoodSwinger/index.html";
+  });
+
+  // Retrieve stored search results and selected mood from sessionStorage
+  const storedResults = sessionStorage.getItem('searchResults');
+  const selectedMood = sessionStorage.getItem('selectedMood');
+
+  if (storedResults && selectedMood) {
+    $('#moods').val(selectedMood);
+    $('#results').html(storedResults);
+  }
+
+  // Check if the access token is present in the URL hash
   var accessToken = getAccessTokenFromURL();
   if (accessToken) {
-    // Fetch user's profile data and display profile picture
+    // If access token is present, fetch user's profile data
     fetchSpotifyProfile(accessToken);
   }
 });
@@ -116,7 +222,7 @@ function fetchSpotifyProfile(accessToken) {
       'Authorization': 'Bearer ' + accessToken
     },
     success: function(response) {
-      // Display user's profile picture
+      // On success, display user's profile picture
       displayProfilePicture(response.images[0].url);
     },
     error: function(xhr, status, error) {
@@ -127,15 +233,11 @@ function fetchSpotifyProfile(accessToken) {
 
 function displayProfilePicture(profilePictureUrl) {
   // Display user's profile picture
-  var profilePictureImg = document.getElementById('profile-image');
-  profilePictureImg.src = profilePictureUrl;
+  var profilePictureDiv = document.getElementById('profile-picture');
+  profilePictureDiv.innerHTML = `<img src="${profilePictureUrl}" alt="Profile Picture">`;
 }
 
-function logout() {
-  // Redirect to logout URL or perform logout action
-  window.location.href = "https://scripteds.github.io/MoodSwinger/index.html"; // Replace with actual logout URL or action
-}
-
+// Function to extract access token from URL hash
 function getAccessTokenFromURL() {
   var hash = window.location.hash.substring(1);
   var params = hash.split('&');
@@ -145,9 +247,10 @@ function getAccessTokenFromURL() {
       return param[1];
     }
   }
-  return null;
+  return null; // Access token not found in URL hash
 }
 </script>
 
 </body>
 </html>
+
