--- a/second_page.html
+++ b/second_page.html
@@ -185,6 +185,7 @@ button:hover {
     <option value="chill">Chill</option>
     <option value="sad">Sad</option>
     <option value="happy">Happy</option>
+    <option value="angry">Angry</option>
   </select>
 
   <button onclick="searchSongs()">Search</button>
